# adk-interview-prep

./: .env.example  .gitignore  README.md  audio_handler.py  config.py  enhanced_streamlit_ui.py  enhanced_streamlit_voice_client.py  enhanced_voice_server.py  main.py  pyproject.toml  requirements.txt
agents/: competency_agent.py  enhanced_voice_workflow_agent.py  interview_manager.py  speech_coach_agent.py  transcription_agent.py  voice_streaming_agent.py
core/: job_analyzer.py  voice_handler.py
ui/: adk_streaming_backend.py  real_time_voice_ui.py  streamlit_ui.py  streamlit_voice_integration.py
